[gd_scene load_steps=14 format=3 uid="uid://blpa7jm8gninj"]

[ext_resource type="Script" uid="uid://bdgu0223sybgl" path="res://scripts/inimigos/boss_1.gd" id="1_0dcvt"]
[ext_resource type="Texture2D" uid="uid://cdeufq01aatay" path="res://sprites/spritesheet.png" id="2_ox4q6"]
[ext_resource type="Texture2D" uid="uid://d04pvgqswq468" path="res://sprites/player_placeholder.png" id="3_7av1j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c8kd3"]
radius = 22.45
height = 127.75

[sub_resource type="AtlasTexture" id="AtlasTexture_re1gh"]
atlas = ExtResource("2_ox4q6")
region = Rect2(0, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rv2m"]
atlas = ExtResource("2_ox4q6")
region = Rect2(64, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioal7"]
atlas = ExtResource("2_ox4q6")
region = Rect2(128, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qbf6"]
atlas = ExtResource("2_ox4q6")
region = Rect2(192, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vdln"]
atlas = ExtResource("2_ox4q6")
region = Rect2(256, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x5o3"]
atlas = ExtResource("2_ox4q6")
region = Rect2(320, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a6au"]
atlas = ExtResource("2_ox4q6")
region = Rect2(384, 0, 64, 58)

[sub_resource type="SpriteFrames" id="SpriteFrames_re1gh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_re1gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rv2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioal7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qbf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vdln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x5o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a6au")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_7av1j")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0td83"]
size = Vector2(80, 126.475)

[node name="Inimigo" type="CharacterBody2D" groups=["inimigo", "recebe_dano"]]
script = ExtResource("1_0dcvt")
vida_maxima = 50.0
distancia_descongelar = 120.0
dano_causado = 15.0
distancia_ataque = 160.0

[node name="Collision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CapsuleShape2D_c8kd3")

[node name="Sprites" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
process_mode = 3
position = Vector2(2, 0)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_re1gh")
autoplay = "default"

[node name="Andando" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
autostart = true

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_0td83")

[node name="ApontaPlayer" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -14)
collision_mask = 2

[node name="CooldownAtaque" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true
